--- a/ZhopoutsampleAR.html
+++ b/ZhopoutsampleAR.html
@@ -5,11 +5,11 @@
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='trackingMethod: best;'>
+  <a-scene embedded artoolkit='sourceType:webcam;'>
       <a-anchor hit-testing-enabled='true'>
       <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
       </a-anchor>
-    <a-camera-static/>
+    <a-marker-camera preset='hiro'><a-marker-camera/>
   </a-scene>
 </body>
 </html>
