--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       <a-anchor hit-testing-enabled='true'>
       <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
       </a-anchor>
-    <a-marker-camera preset='hiro'><a-marker-camera/>
+    <!-- <a-marker-camera preset='hiro'><a-marker-camera/> -->
+    <a-camera-static/>
   </a-scene>
 </body>
 </html>
