--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <a-assets>
       	<a-asset-item id="earth" src="/assets/scene.gltf"></a-asset-item>
       </a-assets>
+      <a-entity gltf-model="##earth"></a-entity>
       <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
       </a-anchor>
     <!-- <a-marker-camera preset='hiro'><a-marker-camera/> -->
