--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded artoolkit='sourceType:webcam;'>
-      <a-anchor hit-testing-enabled='true'>
-     <!--  <a-assets>
-      	<a-asset-item id="earth" src="/assets/scene.gltf"></a-asset-item>
-      </a-assets>
-      <a-entity gltf-model="##earth"></a-entity> -->
-      <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-      </a-anchor>
+  	  	<a-assets>
+		  <a-asset-item id="tree" src="/assets/scene.gltf"></a-asset-item>
+		</a-assets>
+	
+		<a-entity gltf-model="##tree"></a-entity>	
+    <!--   <a-anchor hit-testing-enabled='true'>          
+      	<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+      </a-anchor> -->
+      
     <!-- <a-marker-camera preset='hiro'><a-marker-camera/> -->
     <a-camera-static/>
   </a-scene>
+  
 </body>
 </html>
