--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded artoolkit='sourceType:webcam;'>
   	  	
-	
+	  <a-assets>
+		 <a-asset-item id="tree" src="/assets/scene.gltf"></a-asset-item>
+	  </a-assets>
 		
-      <a-anchor hit-testing-enabled='true'>          
-      	<!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
-      	<a-assets>
-		  <a-asset-item id="tree" src="/assets/scene.gltf"></a-asset-item>
-		</a-assets>
-		<a-entity gltf-model="##tree"></a-entity>	
+      <a-anchor hit-testing-enabled='true'>                	      
+		<a-entity gltf-model="##tree" scale="0.01 0.01 0.01"></a-entity>	
       </a-anchor> 
-
-    <!-- <a-marker-camera preset='hiro'><a-marker-camera/> -->
+    
     <a-camera-static/>
   </a-scene>
   
