--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	  </a-assets>
 		
       <a-anchor hit-testing-enabled='true'>                	      
-		<a-entity gltf-model="##tree" scale="0.01 0.01 0.01"></a-entity>	
+		<a-entity gltf-model="#tree" scale="0.01 0.01 0.01"></a-entity>	
       </a-anchor> 
     
     <a-camera-static/>
