--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	  </a-assets>
 		
       <a-anchor hit-testing-enabled='true'>                	      
-		<a-entity gltf-model="#tree" scale="0.01 0.01 0.01"></a-entity>	
+		    <a-entity gltf-model="##tree" scale="0.01 0.01 0.01"></a-entity>	
+        <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
       </a-anchor> 
     
     <a-camera-static/>
