--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
 <head>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/examples/vendor/aframe/build/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
@@ -19,5 +19,22 @@
     <a-camera-static/>
   </a-scene>
   
+</body>
+</html> -->
+
+
+<html>
+<head>
+  <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+</head>
+<body style='margin : 0px; overflow: hidden;'>
+  <a-scene embedded artoolkit='sourceType:webcam;'>
+    <a-marker preset="hiro">
+      <a-entity gltf-model-next="src:url(/zhopout-puthithagapguthal-ar/assets/marcus/scene.gltf)">        
+      </a-entity>
+    </a-marker>
+  </a-scene>  
 </body>
 </html>
