--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded artoolkit='sourceType:webcam;'>
     <a-marker preset="hiro">
-      <a-entity gltf-model-next="src:url(/zhopout-puthithagapguthal-ar/assets/marcus/scene.gltf)">        
+      <a-entity gltf-model-legacy="src:url(/zhopout-puthithagapguthal-ar/assets/marcus/scene.gltf)">        
       </a-entity>
     </a-marker>
   </a-scene>  
