--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded artoolkit='sourceType:webcam;'>
-    <a-marker preset="hiro">
-      <a-entity position="0 0.7 0" gltf-model-legacy="src:url(/zhopout-puthithagapguthal-ar/assets/marcus/scene.gltf)">        
-      </a-entity>
+    <a-marker preset="hiro">    
       <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+      <a-entity position="0 0.7 0" gltf-model-next="src:url(/zhopout-puthithagapguthal-ar/assets/marcus/scene.gltf)"></a-entity>
     </a-marker>
   </a-scene>  
 </body>
