--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
   <a-scene embedded artoolkit='sourceType:webcam;'>
     <a-marker preset="hiro">    
       <a-box position='0 0.5 0' material='opacity: 0.7;'></a-box>
-      <a-entity position="0 0.7 0" gltf-model-next="src:url(/zhopout-puthithagapguthal-ar/assets/marcus/scene.gltf)"></a-entity>
+      <a-entity position="0 0.7 0" 
+        obj-model="obj: url(/zhopout-puthithagapguthal-ar/assets/karthik/hummer.obj); 
+                   mtl: url(/zhopout-puthithagapguthal-ar/assets/karthik/hummer.mtl)">        
+      </a-entity>
     </a-marker>
   </a-scene>  
 </body>
