--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
   <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>  
+  <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded artoolkit='sourceType:webcam;'>
+  
     <a-marker preset="hiro">    
-      <a-box position='0 0.5 0' material='opacity: 0.7;'></a-box>
-      <a-entity position="0 0.7 0" 
-        obj-model="obj: url(/zhopout-puthithagapguthal-ar/assets/papyrus/sculpt.obj); 
-                   mtl: url(/zhopout-puthithagapguthal-ar/assets/papyrus/Autodesk123DSculpt.mtl)">        
+      <a-box position='0 0.5 0' material='opacity: 0.7;'></a-box>     
+      <a-entity id="drone" position="0 0 0" scale="1 1 1"
+        gltf-model-next="src: url(./assets/drone/busterDrone.gltf);"
+        animation-mixer>
       </a-entity>
     </a-marker>
+
+    <a-entity camera></a-entity>
+
   </a-scene>  
 </body>
 </html>
