--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <a-scene embedded artoolkit='sourceType:webcam;'>
   
     <a-marker preset="hiro">    
-      <a-box position='0 0.5 0' material='opacity: 0.7;'></a-box>     
-      <a-entity id="drone" position="0 0 0" scale="1 1 1"
+      <!-- <a-box position='0 0.5 0' material='opacity: 0.7;'></a-box>      -->
+      <a-entity id="drone" position="0 0.5 0" scale="1 1 1"
         gltf-model-next="src: url(./assets/drone/busterDrone.gltf);"
         animation-mixer>
       </a-entity>
