--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a-marker preset="hiro">    
       <!-- <a-box position='0 0.5 0' material='opacity: 0.7;'></a-box>      -->
       <a-entity id="drone" position="0 0.5 0" scale="1 1 1"
-        gltf-model-next="src: url(./assets/earth/scene.gltf);"
+        gltf-model-next="src: url(./assets/marcus/scene.gltf);"
         animation-mixer>
       </a-entity>
     </a-marker>    
