--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
         gltf-model-next="src: url(./assets/marcus/scene.gltf);"
         animation-mixer>
       </a-entity>
-      <a-animation attribute="rotation"
-                   dur="10000"
+      <a-animation attribute="rotation"                   
                    fill="forwards"
                    to="0 360 0"
                    repeat="indefinite"
-                   direction="reverse">        
+                   direction="alternateReverse">        
       </a-animation>
       </a-entity>
     </a-marker>        
