--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a-marker preset="hiro">    
       
     <a-entity>
-      <a-entity id="drone" position="0 0 0.5" scale="1 1 1"
+      <a-entity id="drone" position="0 0 -0.5" scale="0.5 0.5 0.5" rotation="-90 -45 45"
         gltf-model-next="src: url(./assets/marcus/scene.gltf);"
         animation-mixer>
       </a-entity>
