--- a/ar-geo.html
+++ b/ar-geo.html
@@ -406,7 +406,7 @@ window.onload = function(){
 		<!--<a-sphere gps-place="longitude: 37.470155; latitude: 55.153565"></a-sphere>
 		<a-sphere gps-place="longitude: 37.469820; latitude: 55.153653"></a-sphere> -->
 
-    <a-entity id="drone" position="0 0 -0.5" scale="0.5 0.5 0.5" rotation="-90 -45 45"
+    <a-entity id="drone" gps-place="longitude: 37.470155; latitude: 55.153565" scale="0.5 0.5 0.5" rotation="-90 -45 45"
         gltf-model-next="src: url(./assets/marcus/scene.gltf);"
         animation-mixer>
     </a-entity>
