--- a/ar-geo.html
+++ b/ar-geo.html
@@ -403,8 +403,8 @@ window.onload = function(){
 		
 		<a-camera id="camera" user-height="1.6" gps-position compass-rotation><!--  --></a-camera>
 		
-		<!--<a-sphere gps-place="longitude: 37.470155; latitude: 55.153565"></a-sphere>
-		<a-sphere gps-place="longitude: 37.469820; latitude: 55.153653"></a-sphere> -->
+		<a-sphere gps-place="longitude: 37.470155; latitude: 55.153565"></a-sphere>
+		<a-sphere gps-place="longitude: 37.469820; latitude: 55.153653"></a-sphere> 
 
     <a-entity id="drone" gps-place="longitude: 37.470155; latitude: 55.153565" scale="0.5 0.5 0.5" rotation="-90 -45 45"
         gltf-model-next="src: url(./assets/marcus/scene.gltf);"
