--- a/ar-geo.html
+++ b/ar-geo.html
@@ -403,10 +403,10 @@ window.onload = function(){
 		
 		<a-camera id="camera" user-height="1.6" gps-position compass-rotation><!--  --></a-camera>
 		
-		<a-sphere gps-place="longitude: 37.470155; latitude: 55.153565"></a-sphere>
+		//<a-sphere gps-place="longitude: 37.470155; latitude: 55.153565"></a-sphere>
 		
 
-	    <a-entity gps-place="longitude: 37.470155; latitude: 55.153565" scale="0.5 0.5 0.5" rotation="-90 -45 45"
+	    <a-entity gps-place="longitude: 37.470155; latitude: 55.153565" 
 		gltf-model-next="src: url(./assets/marcus/scene.gltf);" animation-mixer>
 	    </a-entity>
 		
