--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
                 </style>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
-   <video class="ar-video" id="video" width="640" height="480" autoplay></video>            
-   <canvas id="canvas" width="640" height="480" style="display:none"></canvas>
-  
-    <a-scene embedded artoolkit='sourceType:webcam;'>
-
+    <a-scene class="ar-video" embedded artoolkit='sourceType:webcam;'>
+      <canvas id="canvas" width="640" height="480" style="display:none"></canvas>
       <a-marker preset="hiro">    
 
       <a-entity>
