--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </a-marker>        
     </a-scene>  
      <div class='btn-container'>            
-            <a class='btn' id="download">Snap/Download</a>
+            <a class='btn' id="download" onclick="return takeScreenshot();">Snap/Download</a>
             </div>
 </body>
    <script>
@@ -78,3 +78,4 @@
    </script>
 </html>
 
+ 
