updated with belly dancing boy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <a-entity>
         <a-entity id="drone" position="0 0 -0.5" scale="0.5 0.5 0.5" rotation="-90 -45 45"
-          gltf-model-next="src: url(./assets/marcus/scene.gltf);"
+          gltf-model-next="src: url(./assets/aj_bellydancing/scene.gltf);"
           animation-mixer>
         </a-entity>
         <a-animation attribute="alternate"                   
