--- a/index.html
+++ b/index.html
@@ -3,79 +3,20 @@
 <head>
   <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>  
-  <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-  <style>
-                    .ar-video{width:100%;height:100vh}
-                    .btn-container{    /* text-align: center; */ position: absolute; bottom: -25px; margin: 0 auto; background: rgba(255, 255, 255, 0.45098039215686275);padding: 10px; width: 100%; text-align: -webkit-center;}
-                    .btn{display: block; background-color: #784e98; text-decoration: none; color: #fff;cursor: pointer;  box-shadow: 0px -2px 10px #000;   padding: 10px;   border-radius: 10px;width:100px;}                    
-                </style>
+  <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script> 
 </head>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene class="ar-video" embedded artoolkit='sourceType:webcam;'>
       <canvas id="doubleImage" width="640" height="480" style="visibility:hidden;"></canvas>
       <a-marker preset="hiro">    
-
-      <a-entity>
-        <a-entity id="drone" position="0 0 -0.5" scale="0.5 0.5 0.5" rotation="-90 -45 45"
-          gltf-model-next="src: url(./assets/aj_bellydancing/scene.gltf);"
-          animation-mixer>
-        </a-entity>
-        <a-animation attribute="alternate"                   
-                     fill="backwards"
-                     to="0 0 0.5"
-                     repeat="indefinite"
-                     direction="alternateReverse"
-                     begin="1000"
-                     dur="10000">        
-        </a-animation>
+      	<a-entity>
+       	  <a-entity id="drone" position="0 0 -0.5" scale="0.5 0.5 0.5" rotation="-90 -45 45"
+            gltf-model-next="src: url(./assets/aj_bellydancing/scene.gltf);">
+          </a-entity>        
         </a-entity>
       </a-marker>        
-    </a-scene>  
-     <div class='btn-container'>            
-            <a class='btn' id="download" onclick="return takeScreenshot();">Snap/Download</a>
-            </div>
-</body>
-   <script>
-      function takeScreenshot() {
-			var w = window.open('', '');
-			w.document.title = "Screenshot";
-			var img = new Image();
-			var secondImg = new Image();
-			renderer.render(scene, camera);
-			var doubleImageCanvas = document.getElementById('doubleImage');
-			var context = doubleImageCanvas.getContext('2d');
-			var sources = {
-				firstImage: renderer.domElement.toDataURL("image/png"),
-				secondImage: arToolkitContext.arController.canvas.toDataURL("image/png")
-			};
-
-			loadImages(sources, function(images){
-				context.drawImage(images.secondImage, 0, 0);
-				context.drawImage(images.firstImage, 0, 0);
-				img.src = doubleImageCanvas.toDataURL("image/png");
-				w.document.body.appendChild(img);
-			});
-		}
-
-		function loadImages(sources, callback) {
-			var images = {};
-			var loadedImages = 0;
-			var numImages = 0;
-			// get num of sources
-			for (var src in sources) {
-				numImages++;
-			}
-			for (var src in sources) {
-				images[src] = new Image();
-				images[src].onload = function () {
-					if (++loadedImages >= numImages) {
-						callback(images);
-					}
-				};
-				images[src].src = sources[src];
-			}
-		}              
-   </script>
+    </a-scene>       
+</body>   
 </html>
 
  
