added <a-entity camera>

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             gltf-model-next="src: url(./assets/aj_bellydancing/scene.gltf);">
           </a-entity>                
       </a-marker>        
+      <a-entity camera></a-entity>
     </a-scene>       
 </body>   
 </html>
