--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene class="ar-video" embedded artoolkit='sourceType:webcam;'>      
-      <a-marker preset="hiro">        
-        <a-box position="0 0.5 0"></a-box>
-       	  <a-entity position="0 0.5 0" scale="0.5 0.5 0.5" rotation="-90 -45 45"
-            gltf-model-next="src: url(./assets/aj_bellydancing/scene.gltf);">
-          </a-entity>                
-      </a-marker>        
-      <a-entity camera></a-entity>
+         <a-marker preset="hiro">        
+           <a-box position="0 0.5 0"></a-box>
+       	   <a-entity position="0 0.2 0" scale="0.5 0.5 0.5" rotation="-90 -45 45" gltf-model-next="src: url(./assets/busterDrone/busterDrone.gltf);">
+           </a-entity>                
+         </a-marker>        
+       <a-entity camera></a-entity>
     </a-scene>       
 </body>   
 </html>
