updated with sample glTF from Kronosgroup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <a-scene class="ar-video" embedded artoolkit='sourceType:webcam;'>      
          <a-marker preset="hiro">        
            <!--<a-box position="0 0.5 0"></a-box>-->
-       	   <a-entity position="0 0.5 0" scale="0.5 0.5 0.5" rotation="-90 -45 45" gltf-model-next="src: url(./assets/busterDrone/busterDrone.gltf);">
+       	   <a-entity position="0 0.5 0" scale="0.5 0.5 0.5" rotation="-90 -45 45" 
+                     gltf-model-next="src: url(https://github.com/KhronosGroup/glTF-Sample-Models/2.0/CesiumMilkTruck/glTF/CesiumMilkTruck.gltf);">
            </a-entity>                
          </a-marker>        
        <a-entity camera></a-entity>
