--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene class="ar-video" embedded artoolkit='sourceType:webcam;'>      
          <a-marker preset="hiro">        
-           <!--<a-box position="0 0.5 0"></a-box>-->       	      
+           <a-box position="0 0.5 0"></a-box>
            <a-entity position="0 0.5 0" scale="0.5 0.5 0.5" rotation="-90 -45 45"
                      gltf-model-next="src: url(https://murugandurai.github.io/zhopout-puthithagapguthal-ar/assets/aj_bellydancing/scene.gltf);">
          </a-marker>        
