--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <a-marker preset="hiro">        
            <a-box position="0 0.5 0"></a-box>
            <a-entity position="0 0.5 0" scale="0.5 0.5 0.5" rotation="-90 -45 45"
-                     gltf-model-next="src: url(https://murugandurai.github.io/zhopout-puthithagapguthal-ar/assets/aj_bellydancing/scene.gltf);">
+                     gltf-model="src: url(https://murugandurai.github.io/zhopout-puthithagapguthal-ar/assets/aj_bellydancing/scene.gltf);">
          </a-marker>        
        <a-entity camera></a-entity>
     </a-scene>       
