--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
+<!doctype HTML>
 <html>
-<head>
-  <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>  
-  <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script> 
-</head>
-<body style='margin : 0px; overflow: hidden;'>
-    <a-scene class="ar-video" embedded artoolkit='sourceType:webcam;'>      
-         <a-marker preset="hiro">                   
-           <a-entity position="0 0 -0.5" scale="0.5 0.5 0.5" rotation="-90 -45 45"
-                     gltf-model="src: url(https://murugandurai.github.io/zhopout-puthithagapguthal-ar/assets/aj_bellydancing/scene.gltf);">
-         </a-marker>        
-       <a-entity camera></a-entity>
-    </a-scene>       
-</body>   
+<script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
+  <body style='margin : 0px; overflow: hidden;'>
+    <a-scene embedded arjs>
+  	<a-marker preset="hiro">       
+      <a-entity position="0 0 -0.5" scale="0.5 0.5 0.5" rotation="-90 -45 45"
+        gltf-model="src: url(https://murugandurai.github.io/zhopout-puthithagapguthal-ar/assets/aj_bellydancing/scene.gltf);">
+      </a-entity>             
+  	</a-marker>
+  	<a-entity camera></a-entity>
+    </a-scene>
+  </body>
 </html>
 
  
