--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
-  	<a-marker preset="hiro">       
+  	<a-marker-camera preset="hiro">       
       <a-entity position="0 0 -0.5" scale="0.5 0.5 0.5" rotation="-90 -45 45"
         gltf-model="src: url(https://murugandurai.github.io/zhopout-puthithagapguthal-ar/assets/aj_bellydancing/scene.gltf);">
       </a-entity>             
-  	</a-marker>
+  	</a-marker-camera>
   	<a-entity camera></a-entity>
     </a-scene>
   </body>
