added hiro marker

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
   	</a-marker-camera>
   	<a-entity camera></a-entity>
     </a-scene>
+    <div style="position:fixed;bottom:150px;right:20px;z-index:1;">   
+      <a href="https://jeromeetienne.github.io/AR.js/data/images/HIRO.jpg">Download Marker</a>       
+    </div>   
   </body>
 </html>
